# face_expression_recognition

./: loading_model.py  main.py  pyproject.toml
.ipynb_checkpoints/: face_expression_model-checkpoint.ipynb
src/: pattern_model.py
