[project]
name = "face-expression-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "patool>=4.0.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
]
